--- a/index.html
+++ b/index.html
@@ -210,7 +210,15 @@
               <div class="span6 offset3 order">
                 <!-- Standard Bootstrap button. -->
                 <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-                <button class="btn btn-success btn-large">Preorder</button>
+                <!-- <button class="btn btn-success btn-large">Preorder</button> -->
+
+		<a class="coinbase-button" 
+                   data-button-style="custom_large"
+                   data-button-text="Preorder with Bitcoin"
+                   data-code="8c4402d2bde508700f2c6b7e21bf5210" 
+                   href="https://coinbase.com/checkouts/8c4402d2bde508700f2c6b7e21bf5210">Preorder with Bitcoin</a>
+                <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
               </div>
             </div>
             <div class="row-fluid">
